# hc-graphql-todo

./: README.md
client/: .gqlconfig  package.json  schema.graphql
client/public/: index.html  manifest.json
client/src/: App.js  index.js
client/src/components/: AddItem.js  AddList.js  ItemList.js  ListCards.js
client/src/graphql/: HolochainClient.js  queries.js
client/src/routes/: Items.js  Lists.js
dna/: Cargo.toml  build.sh  run.sh  schema.json
dna/schema/: README.md  package-lock.json  package.json  tsconfig.json
dna/schema/src/: index.ts
dna/tests/: .gqlconfig  README.md  package-lock.json  package.json
dna/tests/src/: index.ts
dna/todo.dna.workdir/: dna.json
dna/zomes/todo/: Cargo.toml
dna/zomes/todo/src/: entries.rs  lib.rs  node.rs  utils.rs
dna/zomes/todo/src/entries/item/: handlers.rs  mod.rs
dna/zomes/todo/src/entries/list/: handlers.rs  mod.rs
