[package]
authors = ["kristofer@fmckl.se"]
edition = "2018"
name = "todo"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "todo"

[dependencies]
serde = "1"
serde_json = "1.0.61"
hc_utils = "0"
hdk3 = "0"
holo_hash = "0"
derive-new = "0.5.8"
juniper = { git = "https://github.com/graphql-rust/juniper" }
